<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurred_main_background"
    android:orientation="vertical"
    tools:context="hu.bme.aut.android.fit2be.activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="top"
        android:background="@drawable/design_toolbars"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit2be_slogan"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/current_day"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="MONDAY"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_info"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|right"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/info_btn" />


    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/btnMday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/design_button_days"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/monday"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnTuday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/design_button_days"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/tuesday"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnWday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/design_button_days"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/wednesday"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnThday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/design_button_days"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/thursday"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/design_button_days"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/friday"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSatday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/design_button_days"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/saturday"
        android:textSize="32sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnSunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/design_button_days"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/sunday"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_newPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:elevation="3dp"
            app:backgroundTint="@color/green"
            app:srcCompat="@drawable/ic_add_white_36dp"
            tools:ignore="ContentDescription" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_delPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:elevation="3dp"
            android:rotation="45"
            app:backgroundTint="@color/red"
            app:srcCompat="@drawable/ic_add_white_36dp"
            tools:ignore="ContentDescription" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>