<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context="hu.bme.aut.android.fit2be.activities.DifficultyActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="top"
        android:background="@drawable/design_toolbars"
        android:elevation="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout_difficulty"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_info"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:layout_gravity="center|right"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/info_btn" />

    </androidx.appcompat.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btnBeg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/diff_beg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/beginner"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFF"
            android:textSize="45sp"
            android:textStyle="bold"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btnInt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/diff_int" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/intermediate"
            android:textColor="#FFF"
            android:textSize="45sp"
            android:textStyle="bold"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btnAdv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/diff_adv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/advanced"
            android:textColor="#FFF"
            android:textSize="45sp"
            android:textStyle="bold"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btnCus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/diff_cus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/custom"
            android:textColor="#FFF"
            android:textSize="45sp"
            android:textStyle="bold"/>

    </FrameLayout>


</LinearLayout>
